--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  retrofit: ^4.0.1
+  dio: ^5.3.3
+  json_annotation: ^4.8.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
+  http: ^1.4.0
+  provider: ^6.1.5
+  loading_icon_button: ^1.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  build_runner: ^2.4.6
+  retrofit_generator: ^8.0.4
+  json_serializable: ^6.7.1
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
