--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   retrofit: ^4.0.1
   dio: ^5.3.3
   json_annotation: ^4.8.1
+  fl_chart: ^0.68.0
+  flutter_svg: ^2.0.9
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
