--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,8 +1,8 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Users\lucas\Desktop\flutter
-FLUTTER_APPLICATION_PATH=E:\flutter_projects\testando
+FLUTTER_ROOT=/home/pedro/Downloads/flutter
+FLUTTER_APPLICATION_PATH=/home/pedro/Documentos/engenharia-software-2-frontend
 COCOAPODS_PARALLEL_CODE_SIGN=true
-FLUTTER_TARGET=lib\main.dart
+FLUTTER_TARGET=lib/main.dart
 FLUTTER_BUILD_DIR=build
 FLUTTER_BUILD_NAME=1.0.0
 FLUTTER_BUILD_NUMBER=1
